# llvm-ct

./: CMakeLists.txt  README.md  flake.nix
include/: ArgDepAnalysis.h  CTBranchPass.h  CTDataPass.h  DataAnalysis.h  Debug.h
scripts/: cfg-image.sh  test-transform.sh
src/: ArgDepAnalysis.cpp  CTBranchPass.cpp  CTDataPass.cpp  DataAnalysis.cpp  Debug.cpp  Plugin.cpp
test/: lit.cfg.py
test/analysis/: data_analysis.ll  data_arg_ptr.ll  data_struct.ll  loop.ll  store_load.ll  temp.ll  test1.ll  test2.ll  test3.ll
test/c/gf_mul/: gf_mul.c
test/c/inf-loop/: loop.c
test/c/nested/: nested.c
test/examples/: conjunction-in-condition.ll  ct-branch-data.ll  goto.ll  guard-if-else.ll  guard-multi-store.ll  guard-only-else.ll  if-inside-loop.ll  loop-in-ifelse.ll  multiple-exits-to-ipdom.ll  nested-if.ll  simple-if.ll  test1-mergereturn.ll  unmarked-in-marked.ll
